<resources>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="general_failure_message">An error occurred, please try again later.</string>
    <string name="no_network_failure_title">No internet connection</string>
    <string name="no_network_failure_message">Please check your connection again and try again later.</string>
    <string name="new_version_title">New app version now available in store</string>
    <string name="new_version_message">Please update the app to the new version for the best experience!</string>
    <string name="app_suspend_title">App has been suspended in store</string>
    <string name="app_suspend_message">Please download the new version of the app for the best experience</string>

    <string name="limited_time_offer">for a lifetime</string>
    <string name="continue_limited_version">Continue limited version</string>
    <string name="term_of_use"><u>Term of use</u></string>
    <string name="privacy_policy"><u>Privacy policy</u></string>
    <string name="policy_text">- Payment will be charged to Google Account at confirmation of purchase.\n- Subscription automatically renews unless auto-renew is turned off at least 24-hours before the end of current period.\n- Account will be charged for renewal within 24-hours prior to the end of current period after confirmation of purchase.\n- Subscription may be managed by the user and auto-renewal may be turned off by going to the user\'s Account Settings after purchase.\n- Any unused portion of free trial period, if offered, will be forfeited when the user purchases a subscription to that publication, where applicable.</string>
    <string name="remove_all_ads">Remove all ads</string>
    <string name="life_time">Lifetime</string>
    <string name="continue_str">Continue</string>
    <string name="free_trial_name">%1$s-Days Free Trial</string>
    <string name="free_trial_desc">then %1$s/%2$s, cancel anytime</string>
    <string name="most_popular">BEST CHOICE</string>
    <string name="onetime">Onetime</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="yearly">Yearly</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="privacy">Privacy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="annual">annual</string>
    <string name="cancel_anytime">Cancel Anytime</string>
    <string name="ads_free">No Ads</string>
    <string name="unlimited_download">Unlimited Download</string>
    <string name="get_full_access">Get full access \nfor game</string>
    <string name="_3_day_free_trial">3-Day FREE Trial</string>
    <string name="back">Back</string>
    <string name="retry">Retry</string>
    <string name="congratulations">Congratulations</string>
    <string name="upgrade_premium_successfully_message">You have successfully upgraded to premium!</string>
    <string name="no_product_selected">No product selected</string>
    <string name="waiting_for_billing_connection">Waiting for billing connection!</string>
    <string name="loading_products">Loading products…</string>
    <string name="unlimited_access_to_all_feature">Unlimited access to all feature</string>
    <string name="no_internet_connection_title">Whoops!!</string>
    <string name="no_internet_connection_message">No internet connection was found.\nCheck your connection or try again.</string>
    <string name="turn_on_wifi_cta">Wifi</string>
    <string name="turn_on_mobile_data_cta">Mobile Data</string>
</resources>
