<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.subscription.SubscriptionActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/ic_cancel"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/unlimited_access_to_all_feature"
                android:textColor="@android:color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:minHeight="300dp"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:paddingHorizontal="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_purchase_new" />

            <LinearLayout
                android:id="@+id/layoutLoading"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/loading_products"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/continue_str"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <LinearLayout
                android:id="@+id/lnTermAndPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tvTermsOfUse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/term_of_use"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvPrivacy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/privacy_policy"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:paddingBottom="6dp"
                android:text="@string/policy_text"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
